--- a/Notes.csproj
+++ b/Notes.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="NotesSpash" />
+  </ItemGroup>
+
 </Project>
