Deleted new class for splashscreen, and implemented it in Build action for an Image

--- a/Notes.csproj
+++ b/Notes.csproj
@@ -19,7 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Notesimg.png" />
     <None Remove="NotesSpash" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <SplashScreen Include="Notesimg.png" />
   </ItemGroup>
 
 </Project>
