--- a/Notes.csproj
+++ b/Notes.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>Notesimg.ico</ApplicationIcon>
+    <ApplicationIcon>Skærmbillede 2023-05-09 082705.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +18,10 @@
     <None Remove="Notesimg.png" />
     <None Remove="NotesSpash" />
     <None Remove="NTApp logo.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Skærmbillede 2023-05-09 082705.ico" />
   </ItemGroup>
 
   <ItemGroup>
